# philosophers

./: README.md  wiki.md
philo_four/: CMakeLists.txt  main.c
philo_four/headers/: check_status.h  libft_functions.h  print.h
philo_four/srcs/: check_status.c  fork_philo_process.c  initialise_philos.c  start_action.c
philo_one/: CMakeLists.txt  Makefile  available_functions.txt  check_status.c  clean_up.c  create_philos.c  create_philosophers.c  init_program_setup.c  main.c  philo_one  philo_one.h  setup.c  start_action.c  steps.txt  support_functions.c
philo_one/headers/: check_status.h  clean_up.h  grab_forks.h  initialise_philos.h  print.h  process_input.h  start_action.h  struct.h  support_functions.h  time_calculation.h
philo_one/srcs/: check_status.c  clean_up.c  grab_forks.c  initialise_philos.c  libft_functions.c  print.c  process_input.c  start_action.c  support_functions.c  time_calculation.c
philo_one/support_functions/: support_01.c
philo_one_copy/: check_status.c  init_program_setup.c  main.c  philo_one.h  start_action.c  support_functions.c
philo_one_rewrite/: CMakeLists.txt  main.c
philo_one_rewrite/headers/: check_status.h  clean_up.h  initialise_philos.h  print.h  start_action.h  struct.h  time_calculation.h
philo_one_rewrite/srcs/: check_status.c  clean_up.c  initialise_philos.c  print.c  process_input.c  start_action.c
philo_three/: CMakeLists.txt  Makefile  main.c
philo_three/headers/: check_death.h  check_status.h  clean_up.h  fork_child_process.h  fork_philo_process.h  start_action.h  struct.h  time_calculation.h
philo_three/practice/: CMakeLists.txt  semaphore functions.txt  test1.c
philo_three/srcs/: check_death.c  check_status.c  clean_up.c  fork_child_process.c  fork_philo_process.c  initialise_philos.c  print.c  process_input.c  start_action.c
philo_two/: CMakeLists.txt  Makefile  philo_two
philo_two/headers/: clean_up.h  struct.h
philo_two/practice/: CMakeLists.txt  main.c
philo_two/srcs/: check_status.c  clean_up.c  grab_forks.c  initialise_philos.c  print.c  process_input.c  start_action.c  time_calculation.c
practice/: CMakeLists.txt  a.out  mutex_0.c  mutex_switch.c  mutex_thread_example.c  thread_1.c  threads.c
